--- a/css/style.css
+++ b/css/style.css
@@ -8,13 +8,14 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Big+Shoulders+Inline+Text&family=Lobster&display=swap');
 
-body{
+body, html{
     font-family: Muli;
     height: 100%;
+    scroll-behavior: smooth;
 }
 .main{
     background: url(../img/cool.jpg);
-    height: 458vh;
+    height: 510vh;
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
@@ -22,6 +23,7 @@ body{
 }
 #particles-js {
     background-color: rgba(46, 45, 45, 0.815);
+    width: 100%;
     height: 100%;
     background-attachment: scroll;
     background-position: center;
@@ -34,11 +36,15 @@ body{
     padding: 50px;
     z-index: 999;
     color: #fff;
+    height: 100%;
 }
 .header{
     padding: 30px 0;
-    height: 100%;
+    height: auto;
     font-size: 30px;
+    line-height: 60px;
+}
+.header h2{
     line-height: 60px;
 }
 .bold{
@@ -157,7 +163,7 @@ main {
     font-size: 40px;
     right: 100%; 
     margin-right: -20px;
-  }
+}
 .time:first-child {
   border-top: 0;
   border-top-right-radius:0;
@@ -210,7 +216,7 @@ main {
 .alumni .colums{
     border: 2px solid rgb(190, 241, 87);
     width: 80%;
-    height: 350px;
+    height: 400px;
     padding: 30px 20px;
     text-align: center;
     margin: 0 auto;
@@ -229,10 +235,51 @@ main {
     border-radius: 50%;
     margin: auto;
 }
+.team{
+    padding: 60px 0;
+}
+.team h2{
+    color: rgb(190, 241, 87);
+    text-align: center;
+    font-size: 35px;
+    font-weight: 700;
+    margin-bottom: 50px;
+}
+.team .card{
+    width: 80%;
+    height: 300px;
+    margin: 0 auto;
+}
+.team-img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.team .name{
+    position: absolute;
+    background-color: #f7080cc4;
+    color: #fff;
+    width: 100%;
+    text-align: center;
+    padding: 10px 0;
+    bottom: -15px;
+    line-height: 20px;
+}
+.team span{
+    color: rgb(198, 243, 94);
+    font-size: 12px;
+}
 .trusted{
     padding: 60px 0;
     text-align: center;
     line-height: 90px;
+}
+.trusted h2{
+    color: rgb(190, 241, 87);
+    text-align: center;
+    font-size: 35px;
+    font-weight: 700;
+    margin-bottom: 50px;
 }
 .tr-img{
     margin: 10px 0;
@@ -289,11 +336,10 @@ hr{
     width: 150px;
     height: 50px;
 }
-
 @media (max-width: 480px){
     .main{
         background: url(../img/cool.jpg);
-        max-height: 100%;
+        height: 1000vh;
         background-attachment: fixed;
         background-position: center;
         background-repeat: no-repeat;
@@ -328,14 +374,13 @@ hr{
     .logo{
         width: 100%;
         height: 100px;
-        margin-bottom: 20px;
+        margin-bottom: 50px;
     }
     .contain{
         padding: 20px;
     }
     .vision{
-        padding: 40px 0;
-        padding-top: 0;
+        padding: 60px 0;
     }
     .fa{
         width: 100%;
@@ -383,6 +428,25 @@ hr{
         border-right: 3px solid;
         padding-left: 0px;
     }
+    .time:before {
+        content: counter(section);
+        position: absolute;
+        border-radius: 50%;
+        padding: 10px;
+        height: 40px;
+        width: 40px;
+        background-color: black;
+        text-align: center;
+        line-height: 1.25em;
+        color: white;
+        font-size: 1em;
+    }
+    .time:nth-child(even):before {
+        font-size: 20px;
+    }
+    .time:nth-child(odd):before {
+        font-size: 20px;
+    }
     .ach{
         border-right: none;
     }
@@ -402,11 +466,16 @@ hr{
         text-align: center;
         margin: 20px auto;
     }
+    .team .card{
+        width: 80%;
+        height: 300px;
+        margin: 20px auto;
+    }
 }
 @media (min-width: 481px) and (max-width: 780px){
     .main{
         background: url(../img/cool.jpg);
-        max-height: auto;
+        height: 700vh;
         background-attachment: fixed;
         background-position: center;
         background-repeat: no-repeat;
@@ -451,7 +520,6 @@ hr{
     }
     .vision{
         padding: 40px 0;
-        padding-top: 0;
     }
     .fa{
         width: 100%;
@@ -517,5 +585,27 @@ hr{
         padding: 30px 20px;
         text-align: center;
         margin: 20px auto;
+    }
+    .team .card{
+        width: 80%;
+        margin: 20px auto;
+    }
+}
+@media (min-width:760px) and (max-width:780px){
+    .header .col-md-6{
+        width: 50%;
+    }
+    .header .row{
+        flex-direction: row;
+    }
+}
+@media (max-width:280px){
+    .main{
+        height: 1050vh;
+    }
+}
+@media (min-width:281px) and (max-width:380px){
+    .main{
+        height: 935vh;
     }
 }
