--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,8 @@ body, html{
     background-color: rgba(46, 45, 45, 0.815);
     width: 100%;
     height: 100%;
-    background-attachment: scroll;
+    position: fixed;
+    background-attachment: fixed;
     background-position: center;
     background-repeat: repeat;
     background-size: cover;
