--- a/css/style.css
+++ b/css/style.css
@@ -10,18 +10,19 @@
 body, html{
     font-family: Muli;
     height: 100%;
-    scroll-behavior: smooth;
+    /* scroll-behavior: smooth; */
 }
 .main{
     background: url(../img/cool.jpg);
-    height: 510vh;
+    height: 523vh;
+    /* position: fixed; */
     background-attachment: fixed;
     background-position: center;
-    background-repeat: no-repeat;
+    background-repeat: repeat;
     background-size: cover;
 }
 #particles-js {
-    background-color: rgba(46, 45, 45, 0.815);
+    background-color: rgba(46, 45, 45, 0.5);
     width: 100%;
     height: 100%;
     position: fixed;
