--- a/css/style.css
+++ b/css/style.css
@@ -13,15 +13,16 @@ body, html{
     /* scroll-behavior: smooth; */
 }
 .main{
-    background: url(../img/cool.jpg);
-    height: 400vh;
-    /* position: fixed; */
+    background: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url(../img/Lagos.jpg);
+    height: 100%;
+    position: fixed;
     background-attachment: fixed;
     background-position: center;
     background-repeat: repeat;
     background-size: cover;
+    width: 100%;
 }
-#particles-js {
+/* #particles-js {
     background-color: rgba(46, 45, 45, 0.5);
     width: 100%;
     height: 100%;
@@ -30,7 +31,7 @@ body, html{
     background-position: center;
     background-repeat: repeat;
     background-size: cover;
-}
+} */
 .contain{
     top: 0;
     position: absolute;
