--- a/css/style.css
+++ b/css/style.css
@@ -219,7 +219,7 @@ main {
     border: 2px solid rgb(190, 241, 87);
     width: 80%;
     height: 400px;
-    padding: 30px 20px;
+    padding: 30px 0px;
     text-align: center;
     margin: 0 auto;
 }
@@ -227,9 +227,18 @@ main {
     border: 2px solid rgb(190, 241, 87);
     width: 53%;
     height: 350px;
-    padding: 30px 20px;
+    padding: 30px 0px;
     text-align: center;
     margin: 40px auto;
+}
+.test{
+    margin-top: 30px;
+    background-color: #f7080cc4;
+    color: #fff;
+    width: 100%;
+    text-align: center;
+    padding: 20px;
+    line-height: 20px;
 }
 .al-img{
     width: 80px;
