--- a/css/style.css
+++ b/css/style.css
@@ -82,6 +82,12 @@ body, html{
     font-size: 100px;
     color: #fff;
 }
+hr{
+    width: 100%;
+    height: 2px;
+    background-color: rgb(198, 243, 94);
+    margin: 100px 0;
+}
 .vis{
     padding: 10px 0;
 }
@@ -333,7 +339,8 @@ main {
 .footer a{
     color: rgb(198, 243, 94);
 }
-hr{
+.footer hr{
+    margin: 0;
     border: 1px solid #fff;
 }
 .font{
